[package]
name = "tyan-bmc-cert"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
reqwest = { version = "0.11.23", features = ["cookies","blocking","json","multipart","rustls"] }
serde = { version = "1.0", features = ["derive"] }
json = "*"
